# opc

./: .env.example  .gitignore  GEMINI.md  README.md  README.zh-CN.md  docker-compose.yaml
backend/: .env.example  GEMINI.md  README.md  README.zh-CN.md  manage.py  pyproject.toml
backend/apps/desk/: admin.py  apps.py  consumers.py  models.py  openclaw.py  routing.py  tests.py  urls.py  views.py
backend/apps/desk/migrations/: 0001_initial.py  0002_templates_workstreams_boardbrief.py  0003_approvaldecision.py  0004_agentrun.py  0005_pricingprofile.py  0006_mission_abort_requested_mission_archived_at_and_more.py  0007_auditlog.py  0008_organization_founderprofile_and_more.py  0009_founderprofile_role.py  0010_invitation.py
backend/ceo_desk_server/: asgi.py  settings.py  urls.py  wsgi.py
backend/opc_server/: asgi.py  logger.py  settings.py  urls.py  wsgi.py
backend/tests/: test_multi_agent_pipeline.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: architecture.md  architecture.zh-CN.md  competitive-analysis.md  development.md  development.zh-CN.md  openclaw-deployment.md  openclaw-deployment.zh-CN.md  postgres-migration.md  roadmap.md  template-id-strategy.md  test-report-multi-agent.md
docs/licensing/: README.md
frontend/: GEMINI.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: AuditLogPanel.vue  AuthPanel.vue  OrgChart.vue  (+2 more)
openclaw/: AGENTS.md  SOUL.md  USER.md
scripts/: backup_postgres.sh  bootstrap_openclaw.py  dev.sh  restore_postgres.sh  sync_openclaw_env.py
(+3 files in other folders)
